# matchlock

./: .gitignore  Dockerfile  README.md  design.md  docker-compose.yml  setup-matchlock-containers.sh
backend-go/: .dockerignore  .env.example  .gitignore  Dockerfile  config.example.yaml  go.mod  go.sum  run.sh  setup-db.sh
backend-go/api/: embed.go  openapi.yaml
backend-go/deploy/: matchlock-keeper.service
backend-go/pgdata/: logfile  postgresql.conf  postmaster.opts
backend-go/scripts/: verify-db.go
backend-go/testdata/: fixtures_snapshot.json  (+4 more)
blockchain/: Anchor.toml  Cargo.toml
blockchain/programs/blockchain/: Cargo.toml
blockchain/programs/blockchain/src/: constants.rs  error.rs  instructions.rs  lib.rs  state.rs
blockchain/programs/blockchain/src/cpi/: mod.rs  txline.rs
blockchain/programs/blockchain/src/instructions/: accept_wager.rs  cancel_wager.rs  close_match.rs  init_match_state.rs  initialize.rs  make_wager.rs  register_wallet.rs  settle_wager.rs  unregister_wallet.rs  update_config.rs  void_wager.rs
blockchain/programs/blockchain/tests/: test_wager_lifecycle.rs
blockchain/programs/blockchain/tests/common/: mod.rs
blockchain/programs/txline-mock/: Cargo.toml
blockchain/programs/txline-mock/src/: lib.rs
deploy/: entrypoint.sh  nginx.conf.template  supervisord.conf
docs/: Matchlock-Landing-Page-Brief.docx  integration-journal.md  plan.md  transcript.md
frontend-react/: .dockerignore  .env.example  .oxlintrc.json  Dockerfile  home.html  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
(+609 files in other folders)
