[package]
name = "blockchain"
version = "0.1.0"
description = "Matchlock PVP wager escrow program"
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "blockchain"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "1.1.2"
anchor-spl = { version = "1.1.2", features = ["token"] }

[dev-dependencies]
litesvm = "0.10.0"
solana-account = "3.0.0"
solana-address = "2.0.0"
solana-instruction = "3.0.0"
solana-keypair = "3.0.1"
solana-message = "3.0.1"
solana-program-pack = "3.0.0"
solana-signer = "3.0.0"
solana-system-interface = "2.0.0"
solana-transaction = "3.0.2"
spl-associated-token-account-interface = "2.0.0"
spl-token-interface = "2.0.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }