[workspace]

[package]
name = "txline-mock"
version = "0.1.0"
edition = "2021"
rust-version = "1.89.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "txline_mock"

[features]
idl-build = []

[dependencies]
solana-program = "3.0.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("custom-heap", "custom-panic"))',
] }